FIX: adding margin to notes icon on mobile

--- a/assets/stylesheets/staff_notes.scss
+++ b/assets/stylesheets/staff_notes.scss
@@ -41,6 +41,7 @@
 .staff-notes-icon {
   .mobile-view & {
     float: right;
+    margin-left: 10px;
   }
   cursor: pointer;
 }
